@@ -52,6 +52,9 @@
             href="http://trac.cyberduck.ch/ticket/5487">#5487</a>)
     </li>
     <li>[Feature] Support new 5TB Object Size Limit (S3)</li>
+    <li>[Feature] Upload item in Finder context menu to upload selected file (Mac)</li>
+    <li>[Feature] Upload item in Services menu of thirdparty programs main menu supporting files and folders (Mac)</li>
+    <li>[Feature] Select bookmark to upload to when dragging files to application</li>
     <li>[Bugfix] Limit number of concurrent transfers (<a
             href="http://trac.cyberduck.ch/ticket/5539">#5539</a>)
     </li>
