@@ -11,6 +11,9 @@ Changelog. Last modified: $Date$
 - [Feature] Copy and paste files using menu item to duplicate
 - [Feature] Multipart Uploads with parallelism (S3) (#5487)
 - [Feature] Support new 5TB Object Size Limit (S3)
+- [Feature] Upload item in Finder context menu to upload selected file (Mac)
+- [Feature] Upload item in Services menu of thirdparty programs main menu supporting files and folders (Mac)
+- [Feature] Select bookmark to upload to when dragging files to application
 - [Bugfix] Limit number of concurrent transfers (#5539)
 - [Bugfix] Dragging into topmost folder in browser (#1945)
 - [Bugfix] ACLs getting dropped when updating metadata (S3) (#5571)
